--- a/.env.staging
+++ b/.env.staging
@@ -4,7 +4,7 @@ NODE_ENV = 'production'
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = 'http://mbk.kssbchina.com:8080'
+VUE_APP_BASE_API = 'http://172.16.10.24:8017'
 
 outputDir = 'stage'
 BASE_URL = '/'
