清除密码错误时出现的bug

--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ NODE_ENV = 'production'
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://mbk.hxhzy.cn:8080'
+VUE_APP_BASE_API = 'http://gl.hxjq.org:8080'
 
 outputDir = 'dist'
 BASE_URL = '/'
