--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path-to-regexp": "^6.2.0",
     "qs": "^6.10.1",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-ueditor-wrap": "^2.5.3",
     "vuex": "^3.4.0",
