--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "ip": "^1.1.5",
+    "node-sass": "4.14.1",
     "open": "^8.0.8",
-    "sass": "~1.32.6",
     "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.2.1",
     "script-ext-html-webpack-plugin": "^2.1.5",
