--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ NODE_ENV = 'production'
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://mgl.hxjq.org'
+VUE_APP_BASE_API = 'https://mgl.hxjq.org'
 
 outputDir = 'dist'
 BASE_URL = '/'
