--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@antv/data-set": "^0.11.8",
     "@antv/f2": "^3.8.9",
-    "@antv/g2plot": "^2.3.26",
+    "@antv/g2plot": "^2.3.37",
     "@kangc/v-md-editor": "^1.7.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "clipboard": "^2.0.8",
-    "core-js": "^3.6.5",
+    "core-js": "^3.18.3",
     "cross-env": "^7.0.3",
-    "element-ui": "^2.15.1",
+    "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "increase-memory-limit": "^1.0.7",
     "js-cookie": "^2.2.1",
@@ -34,28 +34,28 @@
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.14",
+    "@vue/cli-plugin-eslint": "^4.5.14",
+    "@vue/cli-plugin-router": "^4.5.14",
+    "@vue/cli-plugin-vuex": "^4.5.14",
+    "@vue/cli-service": "^4.5.14",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-prismjs": "^2.0.1",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "compression-webpack-plugin": "6.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "ip": "^1.1.5",
     "node-sass": "4.14.1",
-    "open": "^8.0.8",
-    "sass-loader": "^8.0.2",
-    "sass-resources-loader": "^2.2.1",
+    "open": "^8.3.0",
+    "sass-loader": "7.3.1",
+    "sass-resources-loader": "^2.2.4",
     "script-ext-html-webpack-plugin": "^2.1.5",
-    "svg-sprite-loader": "^6.0.6",
-    "svgo": "^2.3.0",
-    "vue-loader": "^15.9.7",
+    "svg-sprite-loader": "^6.0.10",
+    "svgo": "^2.7.0",
+    "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.11",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
