--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@antv/data-set": "^0.11.8",
     "@antv/f2": "^3.8.9",
     "@antv/g2plot": "^2.3.37",
+    "@antv/util": "^2.0.17",
     "@kangc/v-md-editor": "^1.7.3",
     "axios": "^0.21.4",
     "clipboard": "^2.0.8",
