--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-ueditor-wrap": "^2.5.3",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0",
     "xlsx": "^0.16.9"
   },
