统计 + 系统页面添加

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard": "^2.0.8",
     "core-js": "^3.18.3",
     "cross-env": "^7.0.3",
+    "echarts": "4.2.1",
     "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "increase-memory-limit": "^1.0.7",
