--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+package-lock.json
+yarn.lock
+
 # Editor directories and files
 .idea
 .vscode
