--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint",
@@ -51,8 +51,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "ip": "^1.1.5",
-    "node-sass": "4.14.1",
     "open": "^8.3.0",
+    "sass": "1.26.8",
     "sass-loader": "7.3.1",
     "sass-resources-loader": "^2.2.4",
     "script-ext-html-webpack-plugin": "^2.1.5",
