--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vue-cli-service serve",
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build:prod": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "build": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint",
     "memory": "cross-env LIMIT=8192 increase-memory-limit"
